fix index on mobile

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -118,6 +118,7 @@ a:-webkit-any-link {
   position: relative;
   z-index: 0;
   min-height: 31rem;
+  line-height: 1.5;
 }
 @media (min-width: 48em) {
   .sidebar {
